2000-11-05  Bart Schaefer  <schaefer@zsh.org>

	* 13120: Doc/Zsh/mod_zpty.yo, Functions/Misc/nslookup,
	Src/utils.c, Src/Modules/zpty.c: Merge Sven's uncommitted patch
	from 13061 with 13116.  WARNING: This reverses the meaning of
	`zpty -b'; the default is now blocking, -b selects non-blocking.
	Fix nslookup accordingly.  Clean up read_poll() somewhat.
	Document that `zpty -w' and `zpty -r' can stream to/from the pty.

2000-11-04  Bart Schaefer  <schaefer@zsh.org>

	* 13118: Completion/Core/compinit: Add `bareglobqual' to the
	standard setopts for the completion system.

	* 13116: Src/Modules/zpty.c: More informative error output; better
	streaming behavior of `zpty -r'; prevent hang on `zpty -t' when
	the command was started with `zpty -b'.

2000-11-02  Sven Wischnowsky  <wischnow@zsh.org>

	* users/3503: Doc/Zsh/mod_parameter.yo, Src/jobs.c,
	Src/Modules/parameter.c: show current/previous job in $jobstates
	
2000-11-01  Sven Wischnowsky  <wischnow@zsh.org>

	* 13107: Functions/Misc/zed: don't reset just-edited trap function
 	to old value
	
2000-10-30  Sven Wischnowsky  <wischnow@zsh.org>

	* 13095: Src/Modules/parameter.c: make assignament to $nameddirs
 	behave like hash -d
	
2000-10-25  Sven Wischnowsky  <wischnow@zsh.org>

	* users/3472: Completion/User/_rcs: use return value of _files,
	don't use ${PRE,SUF}FIX for globbing, complete all files as a
	default for "co"
	
	* 13084: Src/Zle/complist.c: re-display list for cleanup only if
 	we were in menu selection
	
	* 13082: Src/Zle/complist.c, Src/Zle/compresult.c: add a counter
 	for invalidatelist() to allow finding out if there is a new list
	
2000-10-24  Sven Wischnowsky  <wischnow@zsh.org>

	* 13071: Src/Zle/complist.c, Src/Zle/compresult.c: avoid printing
 	file type characters in completion lists for matches ending in a
 	slash
	
2000-10-23  Sven Wischnowsky  <wischnow@zsh.org>

	* 13037: Completion/Core/_path_files, Doc/Zsh/compsys.yo: change